--- a/VendingMachineTest/VendingMachineTest.csproj
+++ b/VendingMachineTest/VendingMachineTest.csproj
@@ -37,6 +37,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+	<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+	<GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\VendingProject\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
@@ -46,6 +50,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+  </ItemGroup>
+  <ItemGroup>
+	<PackageReference Include="Legacy2CPSWorkaround" Version="1.0.0">
+		<PrivateAssets>All</PrivateAssets>
+	</PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="VendingMachineTest.cs" />
